<resources>
    <string name="app_name">Bachelor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_text">Order text</string>
    <string name="prompt_client_email">Client email</string>
    <string name="prompt_temperature">Temperature</string>
    <string name="prompt_wet">Wet in this room</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_pay">Pay</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_add_room">Add Room</string>
    <string name="action_add_machine">Add Machine</string>
    <string name="action_add_project">Add Project</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_exit">Exit</string>
    <string name="action_item_delete">Delete</string>

    <string name="machines_no">No Machines. Please, add one.</string>
    <string name="rooms_no">No Rooms. Please, add one.</string>
    <string name="projects_no">No Projects. Please, add one.</string>
    <string name="tasks_no">No Tasks. Please, add one.</string>
    <string name="title_activity_projects">Projects</string>

    <string name="statistics_title">You can view this statistics</string>
    <string name="title_activity_details">Project Details</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
